<resources>
    <string name="app_name" translatable="false">Coagutest</string>
    <string name="introducir_valor">Introduce un valor</string>
    <string name="introducir_INR">Introduce tu INR</string>
    <string name="calendario">Calendario</string>
    <string name="title_notificacion">Recordatorio</string>
    <string name="msg_notificacion">Has ingerido tu dosis de %s?</string>
    <string name="empty">vacio</string>
    <string name="tu_nivel_inr">Tu nivel INR</string>
    <string name="calcula_tu_inr">Calcula tu INR</string>
    <string name="historial">Historial</string>
    <string name="tu_historial">Mi historial</string>
    <string name="tu_nivel_de_dosis">Tu nivel de dosis</string>
    <string name="farmacias_cercanas">Farmacias</string>
    <string name="consejos_y_dudas">Consejos</string>
    <string name="configuracion">Configuración</string>
    <string name="manana">MAÑANA</string>
    <string name="ayer">AYER</string>
    <string name="buscar_por_fecha">Buscar por fecha</string>
    <string name="resetear_valores">Resetear valores</string>
    <string name="volver_al_menu">Volver al menu</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="login_google">Entra con Google</string>
    <string name="continuar_sin_contraseña">Continuar sin registrarse</string>
<!--Menu Ajustes-->
    <string name="contactos_de_confianza">Contactos de confianza</string>
    <string name="ajustar_notificaciones">Ajustar notificaciones</string>
    <string name="exportar_datos">Exportar datos</string>
<!--Layout ad_introducir_inr-->
    <string name="ultimo_valor">Últimos valores: </string>
<!--Layout ad_planificacion-->
    <string name="ultimo_INR">Último INR</string>
    <string name="inr_hoy">INR Hoy</string>
    <string name="tu_dosis">Tu dosis:</string>
    <string name="alerta">Alerta</string>
    <string name="validando">Validando</string>
    <string name="error_verificacion">Verificación de registro fallido. Es necesario una conexión a internet.</string>
    <string name="enviar_email">Enviar por email</string>
<!--Layout Item_dosis-->
    <string name="text_hoy">Hoy</string>
    <string name="guardar">Guardar</string>
    <string name="he_olvidado_mi_contrasena">He olvidado mi contraseña</string>
    <string name="entrar_con_google">Entrar con Google</string>
    <string name="fecha">Fecha</string>
    <string name="valores_inr">Valores INR</string>
    <string name="continuar_sin_registrarse">Continuar sin registrarse</string>
    <string name="msg_introducir_nivel_dosis">Por favor, introduce el nivel de dosis inicial</string>
    <string name="msg_introducir_nivel_inr_1_7">Por favor, introduce un valor INR entre 1 y 7</string>
    <string name="title_introducir">Cálculo INR</string>
    <string name="button_aceptar">Aceptar</string>
    <string name="button_planificar">Planificar</string>
    <string name="titulo_informacion">Información</string>
    <string name="reconfigurar_inr">Reconfigurar INR</string>
    <string name="select_time">Seleccionar hora</string>
    <string name="introduce_emails">Introduce los emails. Puedes separarlos por ;</string>
    <string name="accept">Aceptar</string>
    <string name="send_email_subject">Histórico IRN</string>
    <string name="send_email_body">Hola, te adjunto mi historico de dosis.</string>
    <string name="send_email">Enviar mail…</string>
    <string name="send_email_error">Error al generar el adjunto.. Consulte los permisos de la aplicación</string>
    <string name="alert_message_restart_inr">Esta seguro que desea borrar el último control?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="nivel_de_dosis_actual">Nivel de dosis actual: %s</string>
    <string name="nivel_de_sangre_actual">Nivel de sangre actual: %s</string>
    <string name="dosis_sintrom_este_dia">Dosis de Sintrom para este dia: %s</string>
    <string name="nada_planificado_fecha">No hay nada planificado para esta fecha</string>
    <string name="btn_compartir">Compartir</string>
</resources>
