<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/coagutest" />

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/usuario"
            android:textColor="#000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contrasena"
            android:textColor="#000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:drawableRight="@android:drawable/ic_lock_idle_lock"
            android:inputType="textPassword"
            android:textColor="#000" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:enabled="false"
            android:text="@string/he_olvidado_mi_contrasena"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />


        <Button
            android:id="@+id/btnLogin"
            style="@style/MainButtonLarger"
            android:layout_marginTop="20dp"
            android:text="@string/entrar" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:buttonSize="wide"
            app:colorScheme="dark" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/tvModoInvitado"
        android:layout_width="325dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="#6B6161">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="#fff"
            android:padding="7dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/continuar_sin_registrarse"
            android:textAlignment="center"
            android:textColor="#000" />
    </FrameLayout>


</RelativeLayout>
