<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/frame_initial"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:text="@string/msg_introducir_nivel_inr_1_7"
            />

        <EditText
            android:id="@+id/etValor"
            android:inputType="numberDecimal"

            android:layout_width="match_parent"
            android:maxLength="4"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/ll_historico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ultimo_valor" />


            <com.google.android.material.chip.ChipGroup
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                app:singleSelection="true"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <Button
            android:layout_gravity="end"
            android:id="@+id/btn_accept"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/button_aceptar"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frame_final"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvIRN_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ultimo_INR"
            android:textAlignment="center"
            />

        <FrameLayout
            android:id="@+id/frame_IRN"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:background="#6B6161"
            android:layout_gravity="center"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvIRN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#fff"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:textColor="#111"
                tools:text="2.2"
                android:textAlignment="center"
                android:textSize="25dp" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inr_hoy"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            />

        <FrameLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:background="#6B6161"
            android:layout_gravity="center"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvIRNNew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="#fff"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textColor="#111"
                android:tag="teta"
                tools:text="4.2"
                android:textAlignment="center"
                android:textSize="40dp" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tu_dosis"
            android:layout_marginTop="20dp"
            android:paddingBottom="7dp"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <LinearLayout
                android:tag="l0"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="33"
                    android:tag="t0"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:tag="i0"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:tag="l1"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="33"
                    android:tag="t1"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:tag="i1"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:tag="l2"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="33"
                    android:tag="t2"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:tag="i2"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_mails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/enviar_email" />

        <Button
            android:layout_gravity="end"
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/button_planificar"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>