<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BarCharActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f3f1f2"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:rotation="180"
            android:src="@drawable/flecha"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/historial"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.anychart.AnyChartView
        android:id="@+id/acv_grafica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frame_buttons"
        android:layout_below="@+id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_buttons"
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/btn_buscar_por_fecha"
            android:layout_width="0dp"
            android:backgroundTint="#f3f1f2"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:drawableStart="@drawable/lupa"
            android:text="@string/buscar_por_fecha"
            app:layout_constraintEnd_toStartOf="@+id/btn_resetear_valores"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_resetear_valores"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/refresh"
            android:text="@string/resetear_valores"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="#000"
            android:backgroundTint="#f3f1f2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_buscar_por_fecha"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_exportar_datos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/save"
            android:text="@string/exportar_datos"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#f3f1f2"
            android:textColor="#000"
            app:layout_constraintEnd_toStartOf="@+id/btn_volver_al_menu"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_buscar_por_fecha" />

        <Button
            android:id="@+id/btn_volver_al_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/volver_al_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_exportar_datos"
            app:layout_constraintTop_toBottomOf="@+id/btn_resetear_valores" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>