<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GraphActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f3f1f2"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:rotation="180"
            android:src="@drawable/flecha"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/historial"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.anychart.AnyChartView
        android:id="@+id/acv_grafica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frame_buttons"
        android:layout_below="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/frame_buttons"
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        >
        <Button
            android:id="@+id/btn_buscar_por_fecha"
            android:layout_width="0dp"
            android:layout_weight="0.48"
            android:backgroundTint="#f3f1f2"
            android:textColor="#000"
            android:drawableStart="@drawable/lupa"
            android:text="@string/buscar_por_fecha"
            style="@style/MainButtonSmall"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="0.02"
            android:layout_height="1dp"/>

        <Button
            android:layout_weight="0.48"
            android:layout_width="0dp"
            android:id="@+id/btn_resetear_valores"
            style="@style/MainButtonSmall"
            android:layout_height="match_parent"
            android:text="@string/btn_compartir"
             />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>